dropdown on mobile fixed

--- a/CCSnew/CCS/CCS/wwwroot/css/Navigation-Toggle.css
+++ b/CCSnew/CCS/CCS/wwwroot/css/Navigation-Toggle.css
@@ -193,7 +193,8 @@
 
 
     .dropdown-menu-toggle {
-        background-color: red;
+        background-color: white;
+        display:none;
         color: black;
         opacity: 1;
         height: 160px;
@@ -207,6 +208,7 @@
 
     .dropdown-item-toggle {
         color: black;
+        display:none;
         padding-bottom: 1px;
         text-align: center;
         margin: 0 auto;
@@ -214,9 +216,10 @@
     }
 
     .open .dropdown-menu-toggle {
-        background-color: red;
+        background-color: white;
         color: black;
         opacity: 1;
+        display:block;
         height: 160px;
         width: 170px;
         border: none;
@@ -232,6 +235,7 @@
         color: black;
         padding-bottom: 1px;
         text-align: center;
+        display:block;
         margin: 0 auto;
         font-size: 15px;
     }
